# MCP-Google-ADK-Integration

./: .gitignore  email_listner.py  pyproject.toml  requirements.txt
agent/: __init__.py  gmailassistant.py
google/: server.py  test.py
google/auth/: auth.py
google/gdrive/: tools.py
google/gmail/: tools.py
google_tools/: server.py
google_tools/gmail/: tools.py
google_tools/utils/: util.py
